--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="field button">
                     <input type="submit" value="Continue to Chat">
                 </div>
-                <div class="link">Already signed up? <a href="#">Login now</a></div>
+                <div class="link">Already signed up? <a href="https://minhaz356.github.io/w-chat-app/login#">Login now</a></div>
             </from>                   
         </section>
     </div>
